<resources>
    <string name="app_name">EMines-Employee</string>
    <string name="google_map_api_key">AIzaSyDdjn78Q56nymORUkHZvTxNfm7czVEroXY</string>
    <string name="e_mines">E-Mines</string>
    <string name="version1_0">Version</string>
    <string name="skip_text">Skip</string>
    <string name="loading_one_text">Find your favorite Meals at the best prices\n with exclusive deals only on aliments app. \ndrheshbdfbdfbdf hsdfhdhd</string>
    <string name="you_have_logged_in_successfully_text">You have logged in \nsuccessfully</string>
    <string name="since_the_beginning_of_the_internet_millions_and_millions_and_millions_of_bhave_died_text">"\nSince the beginning of the internet, millions and millions and millions of bhave died "</string>
    <string name="continue_text">Continue</string>
    <string name="loading_title_one"><![CDATA[Manage Attendance & Schedules]]></string>
    <string name="loading_title_two"><![CDATA[Manage Client, Pickups & Orders]]></string>
    <string name="create_account_text">Create Account</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="enter_your_phone_number_text">Enter your phone number</string>
    <string name="send_otp_text">Send OTP</string>
    <string name="not_registered_yet_text">Not Registered yet?</string>
    <string name="create_an_account_text">Create an Account</string>
    <string name="name_text">Name</string>
    <string name="enter_your_name_text">Enter your name</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="otp_verification_text">OTP Verification</string>
    <string name="enter_otp_text">Enter OTP</string>
    <string name="your_otp_is">Your OTP is </string>
    <string name="sign_up_text">Sign Up</string>
    <string name="resend_otp_text">Resend OTP</string>
    <string name="_00_58sec">00:30Sec</string>
    <string name="verify_text">Verify</string>
    <string name="title_text">Title</string>
    <string name="gajendra_singh_agm_noida">Gajendra Singh \n AGM Noida</string>
    <string name="confirm">Confirm</string>
    <string name="not_me">Not Me</string>
    <string name="verifyme2_location_text"><![CDATA[Location, Date & Time will be Collected If no action taken, you will be marked Absent.]]></string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="types_of_leave">Types of leave</string>
    <string name="full_day">Full Day</string>
    <string name="multi_day">Multi Day</string>
    <string name="half_day">Half Day</string>
    <string name="home">Home</string>
    <string name="pick_up">Pick Up</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="client">Client</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gajendra_singh">Gajendra Singh</string>
    <string name="agm_noida">AGM Noida</string>
    <string name="online">Online</string>
    <string name="my_attendance">My Attendance</string>
    <string name="add_buyer">Add Buyer</string>
    <string name="track_your_orders_anytime">Track your orders anytime</string>
    <string name="add_seller">Add Seller</string>
    <string name="create_order">Create Order</string>
    <string name="get_a_price_for_your_order">Get a price for your order</string>
    <string name="create_pick_up">Create Pick Up</string>
    <string name="my_order">My Order</string>
    <string name="my_pick_up">My Pick Up</string>
    <string name="explore_info">Explore info</string>
    <string name="make_a_new_order_anytime_anywhere"><![CDATA[Make a new order anytime & anywhere]]></string>
    <string name="contact_person">Contact Person (Buyer)</string>
    <string name="contact_person_common">Contact Person</string>
    <string name="buyer_kyc">Buyer KYC</string>
    <string name="buyer_bank_account">Buyer Account</string>
    <string name="bank_account">Bank Account</string>
    <string name="cancel_cap">CANCEL</string>
    <string name="apply_cap">APPLY</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="gajendra_connect_gmail_com_text">gajendra@webkype.com</string>
    <string name="gajendra">Gajendra</string>
    <string name="singh">Singh</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="type_text">Type</string>
    <string name="webkype_info_pvt">WebKype Info PVT.</string>
    <string name="country_text">Country</string>
    <string name="state_text">State</string>
    <string name="galaxy_blue_sapphire_sector_4_text">Galaxy Blue sappire</string>
    <string name="city_text">City</string>
    <string name="uttar_pradesh_text">Uttar Pradesh</string>
    <string name="area_text">Area</string>
    <string name="attendance_text">Attendance</string>
    <string name="dashboard">Dashboard</string>
    <string name="target">Target</string>
    <string name="buyers">Buyers</string>
    <string name="_12"></string>
    <string name="seller">Seller</string>
    <string name="sellers">Sellers</string>
    <string name="delivered_order">Delivered Order</string>
    <string name="scheduled_pickup">Scheduled Pickup</string>
    <string name="complete_pickup">Complete Pickup</string>
    <string name="scheduled_order">Scheduled Order</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="faq">FAQ</string>
    <string name="support">Support</string>
    <string name="contact_admin">Contact Admin</string>
    <string name="q1_2023">Q1-2023</string>
    <string name="_100">100%</string>
    <string name="apr_may_jun">Apr-May-Jun</string>
    <string name="sales_value">Sales Value</string>
    <string name="_20_00_000_rs">20,00,000 Rs</string>
    <string name="today">Today</string>
    <string name="monthly">Monthly</string>
    <string name="date_range">Date Range</string>
    <string name="_03">03</string>
    <string name="absent">Absent</string>
    <string name="present">Present</string>
    <string name="not_mark">Not Mark</string>
    <string name="check_in">Check In:</string>
    <string name="_10_am">10 AM</string>
    <string name="check_out">Check Out:</string>
    <string name="_23_march_2023">23 March 2023</string>
    <string name="sector_18_noida">Sector 18, Noida</string>
    <string name="april_2023">April 2023</string>
    <string name="_12_days">12 Days</string>
    <string name="present_coln">Present:</string>
    <string name="absent_coln">Absent:</string>
    <string name="leave_coln">Leave:</string>
    <string name="pin_code">Pin Code</string>
    <string name="category">Category</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="add_image">Add Image</string>
    <string name="add_video">Add Video</string>
    <string name="post">Post</string>
    <string name="ongoing">Ongoing</string>
    <string name="complete">Complete</string>
    <string name="enter_truck_no">Enter Truck No:</string>
    <string name="up16cm1912">UP16CM1912</string>
    <string name="truck_company">Truck Company:</string>
    <string name="xyz_company">XYZ Company</string>
    <string name="open">Open</string>
    <string name="sun_feb_19_04_14_pm">Sun, Feb 19, 04:14 PM</string>
    <string name="odunsi_junction_kiosk_lane">Odunsi Junction - Kiosk Lane</string>
    <string name="pollution">Pollution</string>
    <string name="permit">Permit</string>
    <string name="rc">RC</string>
    <string name="eway_bill">Eway Bill</string>
    <string name="sos">SOS</string>
    <string name="call_lawyer">Call Lawyer</string>
    <string name="truck_info">Truck Reg No: UP16 CM 9078\nCompany: Solanki Transport Company\nSubscription expires on : 17 March 2023\nType: Overload Challan\nState / City / Pin / Road/ Landmark\nDriver : Rajesh Kumar</string>
    <string name="truck_no">Truck NO. :</string>
    <string name="total_km">Total Km :</string>
    <string name="_3200">3200</string>
    <string name="point_earned">Point Earned</string>
    <string name="incident">Incident</string>
    <string name="no_incident_reported">No Incident Reported</string>
    <string name="next_cap">NEXT</string>
    <string name="buyer_address">Buyer Address</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="back_cap">BACK</string>
    <string name="buyer_info">Buyer Info</string>
    <string name="pan_number">PAN Number</string>
    <string name="upload_pan">Upload PAN</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="gst_number">GST Certificate Number</string>
    <string name="upload_aadhar">Upload Aadhaar</string>
    <string name="upload_gs">Upload GST Certificate</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="bank_name">Branch</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="add_more_text">Add More</string>
    <string name="_3068_woodlawn_drive_milwaukee_n414_672_5388_text">1460  Jenric Lane, Ashmor Drive Florida 414-672-5388</string>
    <string name="edit">Edit</string>
    <string name="kyc">KYC</string>
    <string name="_8837635262">8837635262</string>
    <string name="my_account_text">My Account</string>
    <string name="business_info_text">Business Info</string>
    <string name="kyc_text">KYC</string>
    <string name="help_support_text">Help/Support</string>
    <string name="orders_text">Orders</string>
    <string name="address_text">Address</string>
    <string name="bank_detail_text">Bank Detail</string>
    <string name="payments_text">Payments</string>
    <string name="confirmed_text">Confirmed</string>
    <string name="picked_text">Picked</string>
    <string name="pending_text">Pending</string>
    <string name="completed_text">Completed</string>
    <string name="buying_request_text">Buying Request</string>
    <string name="purchase_order">Purchase Order</string>
    <string name="placed_text">Placed</string>
    <string name="type">Type :</string>
    <string name="sell_corporate_ac_washing_machine_text">Sell (Corporate)AC, Washing Machine</string>
    <string name="weight_text">Weight :</string>
    <string name="rs_50_kg_text">Rs 50/kg</string>
    <string name="rs_5_00_000_text">Rs 5,00,000</string>
    <string name="rate">Rate :</string>
    <string name="est_price_text">Est. Price :</string>
    <string name="_06_apr_2023_10_40_am_text">06 Apr 2023, 10:40 AM</string>
    <string name="_100_mt_text">100 MT</string>
    <string name="order_created_on_text">Order Created on :</string>
    <string name="order_id_text">Order ID</string>
    <string name="s2222od">S2222OD</string>
    <string name="year">Year</string>
    <string name="yearly">Yearly</string>
    <string name="profile_info">Profile Info</string>
    <string name="add_more">Add More</string>
    <string name="rcr_waster_pvt_ltd_rajeev_shukla">Greenscape Eco Management...</string>
    <string name="sector_18_noida_8367897892">08 Rajasthan,India 110072</string>
    <string name="buyer">Buyer</string>
    <string name="others">Others</string>
    <string name="update">Update</string>
    <string name="create_pickup">Create Pickup</string>
    <string name="active">Active</string>
    <string name="achieved_value">Achieved Value</string>
    <string name="target_value">Target Value</string>
    <string name="in_process">In Process</string>
    <string name="no_data_available">Opps! No Order Available.</string>
    <string name="delivered">Delivered</string>
    <string name="selling_request">Selling Request</string>
</resources>