<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:id="@+id/nSVLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollIndicators="none"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context=".screen.login.LoginActivity">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clHeaderLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="@string/login"
                        android:fontFamily="@font/inter_regular"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="@+id/ivTopBgLogin"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivTopBgLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_minus20sdp"
                        android:src="@drawable/ic_toolbar_bg_2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/clHeaderLogin">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvPhnLogin"
                        style="@style/defaultTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/phone_number_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPhoneLogin"
                        style="@style/editTextStyle"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/enter_your_phone_number_text"
                        android:inputType="number"
                        android:maxLength="10"
                        android:singleLine="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvPhnLogin" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSendOtpBtn"
                        style="@style/defaultBtnStyle"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:text="@string/send_otp_text"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etPhoneLogin" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>

    </ScrollView>
</layout>